Use `type=search` for the search query input element

--- a/src/css/forms.styl
+++ b/src/css/forms.styl
@@ -3,9 +3,8 @@
 		float left
 	#update-form-container
 		float right
-	#search-form
-	#update-form
-		input[type=text]
+	#search-form input[type=search]
+	#update-form input[type=text]
 			width auto
 
 @media (max-width: 640px)
