Remove jQuery dependency from `forms`

--- a/src/css/leaflet-overrides.styl
+++ b/src/css/leaflet-overrides.styl
@@ -7,6 +7,10 @@
 .leaflet-control-geosearch
 	margin-top 0 !important
 	display none
+	opacity 0
+	transition opacity 1.325s ease
+	// For Safari and Android.
+	-webkit-transition opacity 1.325s ease
 
 .leaflet-popup-content
 	margin auto
