--- a/src/css/leaflet-overrides.styl
+++ b/src/css/leaflet-overrides.styl
@@ -15,9 +15,27 @@
 	-webkit-transition opacity 1.325s ease
 
 .leaflet-control-search
+	background-color #fff
+	box-shadow 0 1px 5px rgba(0, 0, 0, 0.65)
+	border-radius 4px
+	.leaflet-touch &
+		background-color #f4f4f4
+		box-shadow none
+		border 2px solid rgba(0, 0, 0, 0.2)
+
 	&.search-load .search-input
 		background-image url('../img/loader.gif')
+	.search-input
+		height 24px
+
 	.search-button
-	.search-cancel
-	.search-button:hover
-		background-image url('../img/search-icon.png')
+		width 26px
+		height 26px
+		.leaflet-touch &
+			width 30px
+			height 30px
+
+		&, &:hover
+			background-image url('../img/search-icon.png')
+			.leaflet-touch &
+				background-position 4px 4px
