Add the PicoModal library to the project

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -3,6 +3,7 @@
 
 @import 'bootstrap-container.css'
 @import 'leaflet-overrides.css'
+@import 'picomodal-overrides.css'
 
 @import 'top-level-layout.css'
 @import 'content.css'
