--- a/src/css/top-level-layout.styl
+++ b/src/css/top-level-layout.styl
@@ -19,3 +19,12 @@
 
 #map
 	top 50px
+
+#noscript-msg
+	// Center the “no JavaScript” message across the viewport.
+	// http://www.w3.org/Style/Examples/007/center.en.html#viewport3
+	position absolute
+	top 50%
+	left 50%
+	margin-right -50%
+	transform translate(-50%, -50%)
