Fix syntax of @media declarations ported from Stylus

--- a/src/css/picomodal-overrides.css
+++ b/src/css/picomodal-overrides.css
@@ -13,7 +13,7 @@
 }
 
 /* Cover the whole page on small displays. */
-@media (max-width 767px) {
+@media (max-width: 767px) {
 	.pico-content {
 		width: 100% !important;
 		height: 100% !important;
@@ -26,7 +26,7 @@
 
 /* On large displays, fix the modal's width and limit its height so it
    doesn't flow beyond the page itself. */
-@media (min-width 768px) {
+@media (min-width: 768px) {
 	.pico-content {
 		width: 600px;
 		max-height: 85%;
